Improve Day 20 code quality across 8 languages
Java: Added record Point, ArrayDeque, modern Java patterns
Zig: Extracted tracePath(), cleaner I/O patterns
Bash: Factored count_cheats(), moved arrays to BEGIN block
Clojure: Added docstrings, idiomatic range checks
Lisp: O(1) two-list queue, cached path trace
Rust: Entry API for HashMap, fixed parsing side-effects
C: Encapsulated globals in RaceState struct, documented constants
ARM64: stp paired stores, hoisted addresses, branchless cneg

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>